CPyLib/Parser.cpp
#include "Parser.h"

namespace Translator {
    void Parser::func_log(const char* func) {
    #ifdef _DEBUG
	    std::cout << std::endl << offset.top() << ": " << tokens[offset.top()].get_chars() << " -> " << func;
    #endif
    }

    void Parser::require(bool condition, std::string error_msg) {
        if(!condition)
            throw Parser_Exception(error_msg);
    }

    void Parser::commit(int inc) {
        int token_number = offset.top();
        offset.pop();
        offset.top() = token_number + inc;
    }

    void Parser::start_parsing() {
        offset.emplace(0);
        func_log(__func__);

	    try {
		    root = translation_unit();
	    }
	    catch(Parser_Exception e) {
		    std::cerr << e.what() << std::endl;
	    }
	    std::cout << std::endl << "Parsing finished";
    }

    Node Parser::primary_expression() {
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    switch(tokens[offset.top()].get_type()) {
		    case Type::IDENTIFIER:
		    case Type::CONSTANT:
		    case Type::STRING_LITERAL:
			    p_node.push_back(Node(tokens[offset.top()], __func__, tokens[offset.top()].get_chars()));
			    break;
		    default: {
			    if(check_char(offset.top(), "(")) {
				    p_node.push_back(Node(tokens[offset.top()], __func__));
                    ++offset.top();
                    require(!check_type(result = expression()));
					p_node.push_back(result);
                    require(check_char(offset.top(), ")"));
					p_node.push_back(Node(tokens[offset.top()], __func__));
			    }
                else
                    return Node(Token(), __func__);
			    break;
		    }
	    }
        commit(1);
		return p_node;
    }

    Node Parser::postfix_expression(bool recursive) {			// Recursive
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

        auto condition_inc = [&]() {
            ++offset.top();
            return !check_type(result = argument_expression_list());
        };

	    if(!recursive) {
		    if(!check_type(result = primary_expression())) {
			    p_node.push_back(result);
			    if(!check_type(result = postfix_expression(true)))
				    p_node.push_back(result);
		    }
            else
                return Node(Token(), __func__);
	    }
	    else {
		    if(check_char(offset.top(),"(")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__, "("));
			    if(check_char(offset.top() + 1, ")")) {
				    p_node.push_back(Node(tokens[offset.top() + 1], __func__));
                    offset.top() += 2;
				    if(!check_type(result = postfix_expression(true)))
					    p_node.push_back(result);
			    }
                else {
                    require(condition_inc());
                    p_node.push_back(result);
                    require(check_char(offset.top(), ")"));
                    p_node.push_back(Node(tokens[offset.top()], __func__, ")"));
                    ++offset.top();
                    if(!check_type(result = postfix_expression(true)))
                        p_node.push_back(result);
                }
		    }
		    else if(check_char(offset.top(), ".")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                require(check_type(offset.top() + 1, Type::IDENTIFIER));
				p_node.push_back(Node(tokens[offset.top() + 1], __func__));
                offset.top() += 2;
				if(!check_type(result = postfix_expression(true)))
					p_node.push_back(result);
		    }
		    else if(check_type(offset.top(), Type::INC_OP)) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
			    if(!check_type(result = postfix_expression(true)))
				    p_node.push_back(result);
		    }
		    else if(check_type(offset.top(), Type::DEC_OP)) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
			    if(!check_type(result = postfix_expression(true)))
				    p_node.push_back(result);
		    }
		    else if(check_char(offset.top(), "[")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = expression()));
				p_node.push_back(result);
                require(check_char(offset.top(), "]"));
				p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
				if(!check_type(result = postfix_expression(true)))
					p_node.push_back(result);
		    }
            else
                return Node(Token(), __func__);
	    }
        commit(0);
		return p_node;
    }

    Node Parser::argument_expression_list() {	// Recursive
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = assignment_expression())) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), ",")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = argument_expression_list()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

        commit(0);
		return p_node;
    }

    Node Parser::unary_expression() {				// Recursive
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = postfix_expression(false))) {
		    p_node.push_back(result);
	    }
	    else if(check_type(offset.top(), Type::INC_OP) || check_type(offset.top(), Type::DEC_OP)) {
		    p_node.push_back(Node(tokens[offset.top()], __func__));
            ++offset.top();
            require(!check_type(result = unary_expression()));
			p_node.push_back(result);
	    }
	    else if(!check_type(result = unary_operator())) {
		    p_node.push_back(result);
            require(!check_type(result = cast_expression()));
			p_node.push_back(result);
	    }
        else
            return Node(Token(), __func__);

        commit(0);
		return p_node;
    }

    Node Parser::unary_operator() {
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

        func_log(__func__);

	    std::string tokens_chars = tokens[offset.top()].get_chars();

	    if(tokens_chars == "*" || tokens_chars == "+" || tokens_chars == "-" || tokens_chars == "!")
		    p_node.push_back(Node(tokens[offset.top()], __func__));
        else
            return Node(Token(), __func__);

        commit(1);
		return p_node;
    }

    Node Parser::cast_expression() {					// Recursive
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = unary_expression())) {
		    p_node.push_back(result);
	    }
	    else if(check_char(offset.top(), "(")) {
		    p_node.push_back(Node(tokens[offset.top()], __func__));
            ++offset.top();
            require(!check_type(result = type_name()));
			p_node.push_back(result);
            require(check_char(offset.top(), ")"));
			p_node.push_back(Node(tokens[offset.top()], __func__));
            ++offset.top();
            require(!check_type(result = cast_expression()));
			p_node.push_back(result);
	    }
        else
            return Node(Token(), __func__);

        commit(0);
		return p_node;
    }

    Node Parser::multiplicative_expression() {		// Recursive
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = cast_expression())) {
		    p_node.push_back(result);
            std::string tokens_chars = tokens[offset.top()].get_chars();
		    if(tokens_chars == "*" || tokens_chars == "/" || tokens_chars == "%") {
			    p_node.push_back(Node(tokens[offset.top()], __func__, tokens[offset.top()].get_chars()));
                ++offset.top();
                require(!check_type(result = multiplicative_expression()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

        commit(0);
		return p_node;
    }

    Node Parser::additive_expression() {				// Recursive
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = multiplicative_expression())) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), "+") || check_char(offset.top(), "-")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__, tokens[offset.top()].get_chars()));
                ++offset.top();
                require(!check_type(result = additive_expression()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

        commit(0);
		return p_node;
    }

    Node Parser::relational_expression() {			// Recursive
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = additive_expression())) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), "<") || check_char(offset.top(), ">") ||
			        check_type(offset.top(), Type::LE_OP) || check_type(offset.top(), Type::GE_OP)) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = relational_expression()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

        commit(0);
		return p_node;
    }

    Node Parser::equality_expression() {				// Recursive
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = relational_expression())) {
		    p_node.push_back(result);
		    if(check_type(offset.top(), Type::EQ_OP) || check_type(offset.top(), Type::NE_OP)) {
			    p_node.push_back(Node(tokens[offset.top()], __func__, tokens[offset.top()].get_chars()));
                ++offset.top();
                require(!check_type(result = equality_expression()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

        commit(0);
		return p_node;
    }

    Node Parser::logical_and_expression() {			// Recursive
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = equality_expression())) {
		    p_node.push_back(result);
		    if(check_type(offset.top(), Type::AND_OP)) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = logical_and_expression()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

        commit(0);
		return p_node;
    }

    Node Parser::logical_or_expression() {			// Recursive
        prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = logical_and_expression())) {
		    p_node.push_back(result);
		    if(check_type(offset.top(), Type::OR_OP)) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = logical_or_expression()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::conditional_expression() {			// Recursive
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = logical_or_expression())) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), "?")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = expression()));
				p_node.push_back(result);
                require(check_char(offset.top(), ":"));
				p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = conditional_expression()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::assignment_expression() {			// Recursive
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = conditional_expression())) {
		    p_node.push_back(result);
	    }
	    else if(!check_type(result = unary_expression())) {
		    p_node.push_back(result);
            require(!check_type(result = assignment_operator()));
			p_node.push_back(result);
            require(!check_type(result = assignment_expression()));
			p_node.push_back(result);
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::assignment_operator() {
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    switch(tokens[offset.top()].get_type()) {
		    case Type::MUL_ASSIGN:
		    case Type::DIV_ASSIGN:
		    case Type::MOD_ASSIGN:
		    case Type::ADD_ASSIGN:
		    case Type::SUB_ASSIGN:
			    p_node.push_back(Node(tokens[offset.top()], __func__));
			    break;
		    default: {
			    if(check_char(offset.top(), "="))
				    p_node.push_back(Node(tokens[offset.top()], __func__));
                else
                    return Node(Token(), __func__);
			    break;
		    }
	    }

		commit(1);
		return p_node;
    }

    Node Parser::expression() {						// Recursive
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = assignment_expression())) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), ",")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = expression()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::declaration() {
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = declaration_specifiers())) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), ";")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
		    }
            else {
                require(!check_type(result = init_declarator_list()));
                p_node.push_back(result);
                require(check_char(offset.top(), ";"));
                p_node.push_back(Node(tokens[offset.top()], __func__));
            }
	    }
        else
            return Node(Token(), __func__);

		commit(1);
		return p_node;
    }

    Node Parser::declaration_specifiers() {						// Recursive
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(check_type(offset.top(), Type::TYPEDEF)) {
		    p_node.push_back(Node(tokens[offset.top()], __func__));
            ++offset.top();
		    if(!check_type(result = declaration_specifiers()))
			    p_node.push_back(result);
	    }
	    else if(!check_type(result = type_specifier())) {
		    p_node.push_back(result);
		    if(!check_type(result = declaration_specifiers()))
			    p_node.push_back(result);
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::init_declarator_list() {						// Recursive
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = init_declarator())) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), ",")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = init_declarator_list()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::init_declarator() {
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = direct_declarator(false))) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), "=")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = initializer()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::type_specifier() {
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    switch(tokens[offset.top()].get_type()) {
		    case Type::VOID:
		    case Type::CHAR:
		    case Type::SHORT:
		    case Type::INT:
		    case Type::LONG:
		    case Type::FLOAT:
		    case Type::DOUBLE:
		    case Type::SIGNED:
		    case Type::UNSIGNED:
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
			    break;
		    default: {
			    if(!check_type(result = struct_or_union_specifier()))
				    p_node.push_back(result);
			    else if(!check_type(result = enum_specifier()))
				    p_node.push_back(result);
                else
                    return Node(Token(), __func__);
			    break;
		    }
	    }

		commit(0);
		return p_node;
    }

    Node Parser::struct_or_union_specifier() {
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(check_type(offset.top(), Type::STRUCT)) {
		    p_node.push_back(Node(tokens[offset.top()], __func__));
		    if(check_type(offset.top() + 1, Type::IDENTIFIER)) {
			    p_node.push_back(Node(tokens[offset.top() + 1], __func__));
			    if(check_char(offset.top() + 2, "{")) {
				    p_node.push_back(Node(tokens[offset.top() + 2], __func__));
                    offset.top() += 3;
                    require(!check_type(result = struct_declaration_list()));
					p_node.push_back(result);
                    require(check_char(offset.top(), "}"));
					p_node.push_back(Node(tokens[offset.top()], __func__));
                    ++offset.top();
			    }
                offset.top() += 2;
		    }
            else {
                require(check_char(offset.top() + 1, "{"));
                p_node.push_back(Node(tokens[offset.top() + 1], __func__));
                offset.top() += 2;
                require(!check_type(result = struct_declaration_list()));
                p_node.push_back(result);
                require(check_char(offset.top(), "}"));
                p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
            }
	    }
        else
            return Node(Token(), __func__);

        commit(0);
		return p_node;
    }

    Node Parser::struct_declaration_list() {							// Recursive
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = specifier_qualifier_list())) {
		    p_node.push_back(result);
            require(!check_type(result = struct_declarator_list()));
			p_node.push_back(result);
            require(check_char(offset.top(), ";"));
			p_node.push_back(Node(tokens[offset.top()], __func__));
            ++offset.top();
			if(!check_type(result = struct_declaration_list()))
				p_node.push_back(result);
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::specifier_qualifier_list() {						// Recursive
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = type_specifier())) {
		    p_node.push_back(result);
		    if(!check_type(result = specifier_qualifier_list()))
			    p_node.push_back(result);
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::struct_declarator_list() {							// Recursive
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = struct_declarator())) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), ",")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = struct_declarator_list()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);
	
		commit(0);
		return p_node;
    }

    Node Parser::struct_declarator() {
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = direct_declarator(false))) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), ":")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = conditional_expression()));
				p_node.push_back(result);
		    }
	    }
	    else if(check_char(offset.top(), ":")) {
		    p_node.push_back(Node(tokens[offset.top()], __func__));
            ++offset.top();
            require(!check_type(result = conditional_expression()));
			p_node.push_back(result);
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::enum_specifier() {
	    prepare();
	    int found = 0; // Types: 0 - nothing found, 1 - found other token, 2 - found IDENTIFIER as last
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(check_type(offset.top(), Type::ENUM)) {
		    p_node.push_back(Node(tokens[offset.top()], __func__));
		    if(check_type(offset.top() + 1, Type::IDENTIFIER)) {
			    p_node.push_back(Node(tokens[offset.top() + 1], __func__));
			    if(check_char(offset.top() + 2, "{")) {
				    p_node.push_back(Node(tokens[offset.top() + 2], __func__));
                    offset.top() += 3;
                    require(!check_type(result = enumerator_list()));
					p_node.push_back(result);
                    require(check_char(offset.top(), "}"));
					p_node.push_back(Node(tokens[offset.top()], __func__));
					found = 1;
			    }
			    found = 2;
		    }
            else {
                require(check_char(offset.top() + 1, "{"));
                p_node.push_back(Node(tokens[offset.top() + 1], __func__));
                offset.top() += 2;
                require(!check_type(result = enumerator_list()));
                p_node.push_back(result);
                require(check_char(offset.top(), "}"));
                p_node.push_back(Node(tokens[offset.top()], __func__));
                found = 1;
            }
	    }
        else
            return Node(Token(), __func__);

        commit(found);
		return p_node;
    }

    Node Parser::enumerator_list() {							// Recursive
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = enumerator())) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), ",")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = enumerator_list()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::enumerator() {
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(check_type(offset.top(), Type::IDENTIFIER)) {
		    p_node.push_back(Node(tokens[offset.top()], __func__));
		    if(check_char(offset.top() + 1, "=")) {
			    p_node.push_back(Node(tokens[offset.top() + 1], __func__));
                offset.top() += 2;
                require(!check_type(result = conditional_expression()));
				p_node.push_back(result);
		    }
            ++offset.top();
	    }
        else
            return Node(Token(), __func__);

        commit(0);
		return p_node;
    }

    Node Parser::direct_declarator(bool recursive) {							// Recursive
	    prepare();
	    bool found = false;
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

        auto conditional_inc = [&]() {
            ++offset.top();
            return !check_type(result = conditional_expression());
        };

        auto parameter_inc = [&]() {
            ++offset.top();
            return !check_type(result = parameter_list());
        };

	    if(!recursive) {
		    if(check_type(offset.top(), Type::IDENTIFIER)) {
			    p_node.push_back(Node(tokens[offset.top()], __func__, tokens[offset.top()].get_chars()));
                ++offset.top();
			    if(!check_type(result = direct_declarator(true))) {
				    p_node.push_back(result);
				    found = true;
			    }
			    found = true;
		    }
		    else if(check_char(offset.top(), "(")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__, "("));
                ++offset.top();
                require(!check_type(result = direct_declarator(false)));
				p_node.push_back(result);
                require(check_char(offset.top(), ")"));
				p_node.push_back(Node(tokens[offset.top()], __func__, "): ", 1, true));
                ++offset.top();
				if(!check_type(result = direct_declarator(true))) {
					p_node.push_back(result);
					found = true;
				}
				found = true;
		    }
	    }
	    else {
		    if(check_char(offset.top(), "[")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__, "["));
			    if(check_char(offset.top() + 1, "]")) {
				    p_node.push_back(Node(tokens[offset.top() + 1], __func__, "]"));
                    offset.top() += 2;
				    if(!check_type(result = direct_declarator(true))) {
					    p_node.push_back(result);
					    found = true;
				    }
				    found = true;
			    }
                else {
                    require(conditional_inc());
                    p_node.push_back(result);
                    require(check_char(offset.top(), "]"));
                    p_node.push_back(Node(tokens[offset.top()], __func__, "]"));
                    ++offset.top();
                    if(!check_type(result = direct_declarator(true))) {
                        p_node.push_back(result);
                        found = true;
                    }
                    found = true;
                }
		    }
		    else if(check_char(offset.top(), "(")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__, "("));
			    if(check_char(offset.top() + 1, ")")) {
				    p_node.push_back(Node(tokens[offset.top() + 1], __func__, "): ", 1, true));
                    offset.top() += 2;
				    if(!check_type(result = direct_declarator(true))) {
					    p_node.push_back(result);
					    found = true;
				    }
				    found = true;
			    }
			    else if(parameter_inc()) {
				    p_node.push_back(result);
                    require(check_char(offset.top(), ")"));
					p_node.push_back(Node(tokens[offset.top()], __func__, "): ", 1, true));
                    ++offset.top();
					if(!check_type(result = direct_declarator(true))) {
						p_node.push_back(result);
						found = true;
					}
					found = true;
			    }

			    if(!found) {
                    offset.pop();
                    prepare();
                    ++offset.top();
                    require(!check_type(result = identifier_list()));
					p_node.push_back(result);
                    require(check_char(offset.top(), ")"));
					p_node.push_back(Node(tokens[offset.top()], __func__, "): ", 1, true));
                    ++offset.top();
					if(!check_type(result = direct_declarator(true))) {
						p_node.push_back(result);
						found = true;
					}
					found = true;
			    }
		    }
	    }

	    if(found) {
		    commit(0);
		    return p_node;
	    }
	    else {
		    return Node(Token(), __func__);
	    }
    }

    Node Parser::parameter_list() {					// Recursive
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = parameter_declaration())) {
		    p_node.push_back(result);
		    if(check_char(offset.top(), ",")) {
			    p_node.push_back(Node(tokens[offset.top()], __func__));
                ++offset.top();
                require(!check_type(result = parameter_list()));
				p_node.push_back(result);
		    }
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::parameter_declaration() {
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(!check_type(result = declaration_specifiers())) {
		    p_node.push_back(result);
		    if(!check_type(result = direct_declarator(false)))
			    p_node.push_back(result);
		    else if(!check_type(result = direct_abstract_declarator(false)))
			    p_node.push_back(result);
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::identifier_list() {						// Recursive
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);

	    if(check_type(offset.top(), Type::IDENTIFIER)) {
		    p_node.push_back(Node(tokens[offset.top()], __func__));
		    if(check_char(offset.top() + 1, ",")) {
			    p_node.push_back(Node(tokens[offset.top() + 1], __func__));
                offset.top() += 2;
                require(!check_type(result = identifier_list()));
				p_node.push_back(result);
		    }
            ++offset.top();
	    }
        else
            return Node(Token(), __func__);

		commit(0);
		return p_node;
    }

    Node Parser::type_name() {
	    prepare();
	    Node p_node(Token(Type::parsing), __func__);
	    Node result;

	    func_log(__func__);
